[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = {version = "1.0.2", features = ["ws", "rustls"]}
web3 = "0.17.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.15", features = ["rustls-tls"] }
tungstenite = "0.15"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3"
lazy_static = "1.4.0"

